--- a/SuiviBourse/SuiviBourse/SuiviBourse.csproj
+++ b/SuiviBourse/SuiviBourse/SuiviBourse.csproj
@@ -16,4 +16,10 @@
       <DependentUpon>*.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DataSource\" />
+    <Folder Include="View\" />
+    <Folder Include="ViewModel\" />
+  </ItemGroup>
 </Project>
