--- a/SuiviBourse/SuiviBourse/SuiviBourse.csproj
+++ b/SuiviBourse/SuiviBourse/SuiviBourse.csproj
@@ -19,7 +19,11 @@
 
   <ItemGroup>
     <Folder Include="DataSource\" />
-    <Folder Include="View\" />
-    <Folder Include="ViewModel\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="View\AlertListViewPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
