--- a/SuiviBourse/SuiviBourse.Android/SuiviBourse.Android.csproj
+++ b/SuiviBourse/SuiviBourse.Android/SuiviBourse.Android.csproj
@@ -91,5 +91,8 @@
       <Name>SuiviBourse</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\stats.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
