--- a/SuiviBourse/SuiviBourse.UWP/SuiviBourse.UWP.csproj
+++ b/SuiviBourse/SuiviBourse.UWP/SuiviBourse.UWP.csproj
@@ -151,6 +151,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.4.118</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
   </ItemGroup>
